kubernetes/apps/base/observability/exporters/pve-exporter/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.sstr.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pve-exporter
spec:
  hostnames:
    - pve-exporter.${SECRET_MAIN_DOMAIN_NAME}
  parentRefs:
    - name: main
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: pve-exporter
          namespace: observability
          port: 9221
